@startuml

title __BUSINESS's Class Diagram__\n

  namespace de.applegreen.household.business {
    class de.applegreen.household.business.ClosingService {
        + ClosingService()
        + generateProbation()
        - incrementByValue()
    }
  }
  

  namespace de.applegreen.household.business {
    interface de.applegreen.household.business.HasLogger {
        + logger()
    }
  }
  

  de.applegreen.household.business.ClosingService .up.|> de.applegreen.household.business.HasLogger
  de.applegreen.household.business.ClosingService o-- de.applegreen.household.persistence.BillRepository : billRepository
  de.applegreen.household.business.ClosingService o-- de.applegreen.household.persistence.ClosingRepository : closingRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
